--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </h1>
     <form>
 <input  type="text" name= "search"> 
+<div>
 <button type="submit" > Google Search  </button>
 <button type="submit"> I'm feeling lucky</button>
+</div>
 </form>
 
 </body>
