--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
     <link rel="stylesheet" href= "style.css">
 </head>
     <body>
+<div class="parent-center">
 <h1><img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo, the name Google colored"> 
 </h1>
     <form>
-<input  type="text" name= "search"> 
+<input   type="text" name= "search"> 
+<img class="search-icon" src="https://upload.wikimedia.org/wikipedia/commons/0/0b/Search_Icon.svg">
+
 <div>
 <button type="submit" > Google Search  </button>
 <button type="submit"> I'm feeling lucky</button>
 </div>
 </form>
+</div>
 
 </body>
 </html>
