Added the search-icon and placed the search buttons

--- a/index.html
+++ b/index.html
@@ -2,25 +2,29 @@
 <html>
 <head>
     <link rel="stylesheet" href= "style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+
 </head>
     <body>
-        <header>
+        <header class="head">
 <div class="as" >About  Store
 </div>
-<div>
-<div>
-    Gmail Images 
-</div>
 
+<div class="gi">
+    Gmail Images
+    <span class="material-icons">apps</span> 
+    <button class="sign">Sign in</button>
 </div>
         </header>
 <div class="container">
 <img class="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo, the name Google coloured"> 
 <input class="search" type="text" name= "search">
 <div class="buttons">
-<button type="submit" > Google Search  </button>
-<button type="submit"> I'm feeling lucky </button>
+<button class="b1" type="submit" > Google Search  </button>
+<button class="b2" type="submit"> I'm feeling lucky </button>
 </div>
 </div>
+<span id="search-icon" class="material-icons">search</span> 
 </body>
 </html>
