Finished, not very good, not terrible, meh for now

--- a/index.html
+++ b/index.html
@@ -1,30 +1,55 @@
 
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <link rel="stylesheet" href= "style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
 </head>
     <body>
-        <header class="head">
-<div class="as" >About  Store
-</div>
-
-<div class="gi">
-    Gmail Images
-    <span class="material-icons">apps</span> 
-    <button class="sign">Sign in</button>
-</div>
-        </header>
+        <nav class="head">
+            <div class="as" >About  Store
+            </div>
+            
+            <div class="gi">
+                Gmail Images
+                <span class="material-icons">apps</span> 
+                <button class="sign">Sign in</button>
+            </div>
+        </nav>
+        <main>
+        
 <div class="container">
-<img class="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo, the name Google coloured"> 
+<img class="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo, the name Google coloured">
+<div class="searchall">
+    <span id="search-icon" class="material-icons">search</span> 
 <input class="search" type="text" name= "search">
+</div>
 <div class="buttons">
 <button class="b1" type="submit" > Google Search  </button>
 <button class="b2" type="submit"> I'm feeling lucky </button>
 </div>
 </div>
-<span id="search-icon" class="material-icons">search</span> 
+
+</main>
+<footer>
+<ul class="l1">
+<li>
+<a href="#">Advertising</a></li>
+<li>
+<a href="#">Business</a></li>
+<li>
+<a href="#">How Search works</a></li>
+</ul>
+<ul class="l2">
+    <li>
+    <a href="#">Privacy</a></li>
+    <li><a href="#">Terms</a></li>
+    <li><a href="#">Settings</a></li>
+</ul>
+</footer>
 </body>
 </html>
